After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773105 - audioencoder: Error-handling for pushing headers
audioencoder: Error-handling for pushing headers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.10.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-17 13:59 UTC by Stian Selnes (stianse)
Modified: 2016-10-31 14:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
audioencoder: Error-handling for pushing headers (1.05 KB, patch)
2016-10-17 13:59 UTC, Stian Selnes (stianse)
committed Details | Review

Description Stian Selnes (stianse) 2016-10-17 13:59:45 UTC
Warn about unsuccesfull push of header buffer
Comment 1 Stian Selnes (stianse) 2016-10-17 13:59:49 UTC
Created attachment 337856 [details] [review]
audioencoder: Error-handling for pushing headers
Comment 2 Sebastian Dröge (slomo) 2016-10-20 11:13:11 UTC
Attachment 337856 [details] pushed as a32b25d - audioencoder: Error-handling for pushing headers