audioencoder: Error-handling for pushing headers

https://bugzilla.gnome.org/show_bug.cgi?id=773105